[metadata]
name = MF-VeBRNN
version = file: VERSION
author = Jiaxiang Yi
author_email = J.Yi@tudelft.nl
description = Single-to-multi-fidelity history-dependent learning with uncertainty quantification and disentanglement
long_description = file: README.md
long_description_content_type = text/markdown
keywords = machine learning, material model, multi-fidelity, uncertainty quantification
url = https://github.com/bessagroup/MF-VeBRNN.git
license = BSD-3-Clause License
license_files = file: LICENSE
classifiers =
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:
include_package_data = True
python_requires = >=3.8
install_requires = file: requirements.txt


[options.packages.find]
where=src